# file_rat

./: .gitignore  Cargo.toml  README.md  compose-dev.yaml  test-workflow.ps1
src/: main.rs  metatest.rs
src/structs/: f_item.rs  mod.rs  rat_file.rs  rat_meta.rs  rfile.rs
src/structs/enums/: compression_type.rs  mod.rs
src/structs/impl/: mod.rs  rat_add.rs  rat_extract.rs  rat_list.rs  rat_remove.rs
