[package]
name = "file_rat"
version = "0.1.0"
edition = "2021"

[dependencies]
binrw = "=0.6.0"
memmap2 = "0.5.10"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.base64]
version = "0.21.0"

[dependencies.uuid]
version = "1.3.0"
features = ["v1"]

[dependencies.rand]
version = "0.8.4"
